[package]
name = "scheme-runtime"
version = "0.1.0"
authors = ["mbilling <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["single-threaded"]

single-threaded = []
multi-threaded = []

[dependencies]
lazy_static = "1.4"